RESOLVED FIXED287779
REGRESSION (290430@main): [ MacOS Debug ] ASSERTION FAILED: 10x inspector/timeline/timeline tests are consistent crashes
https://bugs.webkit.org/show_bug.cgi?id=287779
Summary REGRESSION (290430@main): [ MacOS Debug ] ASSERTION FAILED: 10x inspector/tim...
Jay Stfleur
Reported 2025-02-16 19:20:20 PST
Description: inspector/timeline/line-column.html inspector/timeline/recording-start-stop-timestamps.html inspector/timeline/setInstruments-programmatic-capture.html inspector/timeline/timeline-event-CancelAnimationFrame.html inspector/timeline/timeline-event-EventDispatch.html inspector/timeline/timeline-event-FireAnimationFrame.html inspector/timeline/timeline-event-RequestAnimationFrame.html inspector/timeline/timeline-event-performance-mark.html inspector/timeline/timeline-event-screenshots.html inspector/timeline/timeline-recording.html Tests are consistently crashing on Ventura+ WK2 Debug after changes introduced on 290430@main Buildbot URL: https://build.webkit.org/#/builders/1228/builds/886 History: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=inspector%2Ftimeline%2Fline-column.html&test=inspector%2Ftimeline%2Frecording-start-stop-timestamps.html&test=inspector%2Ftimeline%2FsetInstruments-programmatic-capture.html&test=inspector%2Ftimeline%2Ftimeline-event-CancelAnimationFrame.html&test=inspector%2Ftimeline%2Ftimeline-event-EventDispatch.html&test=inspector%2Ftimeline%2Ftimeline-event-FireAnimationFrame.html&test=inspector%2Ftimeline%2Ftimeline-event-RequestAnimationFrame.html&test=inspector%2Ftimeline%2Ftimeline-event-performance-mark.html&test=inspector%2Ftimeline%2Ftimeline-event-screenshots.html&test=inspector%2Ftimeline%2Ftimeline-recording.html&flavor=wk2&style=debug Diff/Image Diff/Crash Log: stderr: ASSERTION FAILED: tracking() /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/WebCore/inspector/agents/InspectorTimelineAgent.cpp(186) : virtual void WebCore::InspectorTimelineAgent::internalStop() 1 0x77fee4695 WebCore::InspectorTimelineAgent::internalStop() 2 0x77ff3f949 WebCore::PageTimelineAgent::internalStop() 3 0x77fee62b6 WebCore::InspectorTimelineAgent::toggleTimelineInstrument(WebCore::InspectorTimelineAgent::InstrumentState) 4 0x77fee5998 WebCore::InspectorTimelineAgent::stopProgrammaticCapture() 5 0x77fee53f4 WebCore::InspectorTimelineAgent::stopFromConsole(WTF::String const&) 6 0x77fd76005 WebCore::InspectorInstrumentation::stopProfilingImpl(WebCore::InstrumentingAgents&, WTF::String const&) 7 0x7805829d2 WebCore::InspectorInstrumentation::stopProfiling(WebCore::Page&, WTF::String const&) 8 0x780582976 WebCore::PageConsoleClient::profileEnd(JSC::JSGlobalObject*, WTF::String const&) 9 0x6fcdf7eec JSC::consoleProtoFuncProfileEnd(JSC::JSGlobalObject*, JSC::CallFrame*) 10 0x738aac038 9 ??? 0x0000000738aac038 0x0 + 31015485496 11 0x6fdc4301b jsc_llint_commonCallOp__llintOpWithMetadata__llintOpWithReturn__llintOp__commonOp__fn__fn__makeReturn__fn__fn__fn__934_callHelper__dispatch_LowLevelInterpreter64_asm_2535 12 0x6fdc41bdf jsc_llint_commonCallOp__llintOpWithMetadata__llintOpWithReturn__llintOp__commonOp__fn__fn__makeReturn__fn__fn__fn__916_callHelper__dispatch_LowLevelInterpreter64_asm_2535 13 0x6fdc19cba llint_call_javascript 14 0x6fca79157 JSC::Interpreter::executeProgram(JSC::SourceCode const&, JSC::JSGlobalObject*, JSC::JSObject*) 15 0x6fcddac9b JSC::evaluate(JSC::JSGlobalObject*, JSC::SourceCode const&, JSC::JSValue, WTF::NakedPtr<JSC::Exception>&) 16 0x6fcddaeb8 JSC::evaluateWithScopeExtension(JSC::JSGlobalObject*, JSC::SourceCode const&, JSC::JSObject*, WTF::NakedPtr<JSC::Exception>&) 17 0x6fc9ddae3 Inspector::JSInjectedScriptHost::evaluateWithScopeExtension(JSC::JSGlobalObject*, JSC::CallFrame*) 18 0x6fc9eab7f Inspector::jsInjectedScriptHostPrototypeFunctionEvaluateWithScopeExtension(JSC::JSGlobalObject*, JSC::CallFrame*) 19 0x738aac038 18 ??? 0x0000000738aac038 0x0 + 31015485496
Attachments
EWS
Comment 1 2025-02-16 19:37:33 PST
Test gardening commit 290467@main (e8a19137b350): <https://commits.webkit.org/290467@main> Reviewed commits have been landed. Closing PR #40694 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2025-02-17 13:26:40 PST
Devin Rousso
Comment 3 2025-02-17 13:58:04 PST
EWS
Comment 4 2025-02-17 14:00:45 PST
Committed 290499@main (97a67e3182da): <https://commits.webkit.org/290499@main> Reviewed commits have been landed. Closing PR #40722 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.