REGRESSION (290430@main): [ MacOS Debug ] ASSERTION FAILED: 10x inspector/timeline/timeline tests are consistent crashes https://bugs.webkit.org/show_bug.cgi?id=287779 rdar://145005057

Unreviewed, just removing an invalid `ASSERT`.

* Source/WebCore/inspector/agents/InspectorTimelineAgent.cpp:
(WebCore::InspectorTimelineAgent::internalStop):
This is also called when the `InspectorTimelineAgent` is destroyed, regardless of whether there's an active timeline recording.
Generally speaking it's also usually less problematic to call `disable`/`stop`/etc. multiple times than it would be to call `enable`/`start`/etc..

* LayoutTests/platform/mac-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/290499@main